--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
   "version": "1.0.0",
   "description": "Shareable eslint config for my projects",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:qmmr/eslint-config-qmmr.git"
   },
+  "keywords": [
+    "eslint",
+    "eslintconfig",
+    "eslint-config",
+    "eslint-react"
+  ],
   "author": "Marcin Kumorek",
   "license": "ISC",
   "devDependencies": {
+    "babel-eslint": "^4.1.1",
     "eslint": "^1.3.1",
     "eslint-plugin-react": "^3.3.2"
+  },
+  "dependencies": {
+    "object-assign": "^4.0.1"
   }
 }
