--- a/.eslintrc
+++ b/.eslintrc
@@ -1,36 +1,7 @@
 {
-  "parser": "babel-eslint",
   "env": {
     "browser": true,
-    "node": true,
-    "es6": true
-  },
-  "plugins": [
-    "react"
-  ],
-  "ecmaFeatures": {
-    "arrowFunctions": true,
-    "binaryLiterals": true,
-    "blockBindings": true,
-    "classes": true,
-    "defaultParams": true,
-    "destructuring": true,
-    "forOf": true,
-    "generators": true,
-    "globalReturn": true,
-    "jsx": true,
-    "modules": true,
-    "objectLiteralComputedProperties": true,
-    "objectLiteralDuplicateProperties": true,
-    "objectLiteralShorthandMethods": true,
-    "objectLiteralShorthandProperties": true,
-    "octalLiterals": true,
-    "regexUFlag": true,
-    "regexYFlag": true,
-    "spread": true,
-    "superInFunctions": true,
-    "templateStrings": true,
-    "unicodeCodePointEscapes": true
+    "node": true
   },
   "rules": {
     "array-bracket-spacing": [2, "always", { "singleValue": true, "objectsInArrays": true, "arraysInArrays": true }],
@@ -60,20 +31,6 @@
     "object-curly-spacing": [2, "always", { "objectsInObjects": true, "arraysInObjects": true }],
     "quotes": [1, "single"],
     "radix": 2,
-    "react/display-name": 1,
-    "react/jsx-boolean-value": 1,
-    "react/jsx-no-undef": 1,
-    "react/jsx-quotes": 1,
-    "react/jsx-sort-props": 0,
-    "react/jsx-uses-react": 1,
-    "react/jsx-uses-vars": 1,
-    "react/no-did-mount-set-state": 1,
-    "react/no-did-update-set-state": 1,
-    "react/no-multi-comp": 1,
-    "react/no-unknown-property": 1,
-    "react/prop-types": 1,
-    "react/self-closing-comp": 1,
-    "react/wrap-multilines": 1,
     "semi": [2, "never"],
     "semi-spacing": [2, { "before": false, "after": true }],
     "space-after-keywords": [2, "always"],
