--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   "author": "Marcin Kumorek",
   "license": "ISC",
   "devDependencies": {
-    "babel-eslint": "^4.1.1",
-    "eslint": "^1.3.1",
-    "eslint-plugin-react": "^3.3.2"
+    "babel-eslint": "5.0.0",
+    "eslint": "2.2.0",
+    "eslint-plugin-react": "4.1.0"
   },
   "dependencies": {
     "extend": "^3.0.0"
