--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   "license": "ISC",
   "devDependencies": {
     "babel-eslint": "5.0.0",
-    "eslint": "2.3.0",
-    "eslint-plugin-react": "4.2.1"
+    "eslint": "2.4.0",
+    "eslint-plugin-react": "4.2.3"
   },
   "dependencies": {
-    "extend": "^3.0.0"
+    "extend": "3.0.0"
   }
 }
