--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "babel-eslint": "8.2.2",
     "eslint": "4.18.1",
-    "eslint-plugin-react": "7.7.0"
+    "eslint-plugin-react": "7.7.0",
+    "prettier": "1.11.0"
   },
   "dependencies": {
     "extend": "3.0.1"
